--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="ie=edge">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>MedicineMan API
+<title>Essences API
   &nbsp;|&nbsp;
-  Backend API for the MedicineMan application.</title>
+  Backend API that provides information of flower essences.</title>
 <style media=screen>
   /*!* Bootstrap v3.3.7 (http://getbootstrap.com)
 * Copyright 2011-2016 Twitter, Inc.
@@ -8399,7 +8399,7 @@
 <div class=container-fluid>
   <div class=row>
     <div class="col-md-12 collection-intro">
-      <h3>MedicineMan API</h3>
+      <h3>Essences API</h3>
       <p>
       <p>Backend API for the MedicineMan application.
     </div>
@@ -8466,7 +8466,7 @@
                           Names By Chakra Priority</strong> &nbsp;|&nbsp;
                         <strong class="request-method border-info">GET</strong>
                         &nbsp;
-                        https://medicineman-api.herokuapp.com//api/v1/chakras/essence-names/living_tree_orchid_essences/solar_plexus/primary
+                        https://essences-api.herokuapp.com//api/v1/chakras/essence-names/living_tree_orchid_essences/solar_plexus/primary
                       </h4>
                     </a></div>
                   <div id=collapse-Chakras-GetCompanyEssenceNamesByChakraPriority class="panel-collapse collapse">
@@ -8486,7 +8486,7 @@
                           Names By Chakra</strong> &nbsp;|&nbsp;
                         <strong class="request-method border-info">GET</strong>
                         &nbsp;
-                        https://medicineman-api.herokuapp.com//api/v1/chakras/essence-names/living_tree_orchid_essences/root
+                        https://essences-api.herokuapp.com//api/v1/chakras/essence-names/living_tree_orchid_essences/root
                       </h4>
                     </a></div>
                   <div id=collapse-Chakras-GetCompanyEssenceNamesByChakra class="panel-collapse collapse">
@@ -8505,7 +8505,7 @@
                           Chakra</strong> &nbsp;|&nbsp;
                         <strong class="request-method border-info">GET</strong>
                         &nbsp;
-                        https://medicineman-api.herokuapp.com//api/v1/chakras/essence-data/root
+                        https://essences-api.herokuapp.com//api/v1/chakras/essence-data/root
                       </h4>
                     </a></div>
                   <div id=collapse-Chakras-GetEssenceDataByChakra class="panel-collapse collapse">
@@ -8524,7 +8524,7 @@
                           Chakra</strong> &nbsp;|&nbsp;
                         <strong class="request-method border-info">GET</strong>
                         &nbsp;
-                        https://medicineman-api.herokuapp.com//api/v1/chakras/essence-names/root
+                        https://essences-api.herokuapp.com//api/v1/chakras/essence-names/root
                       </h4>
                     </a></div>
                   <div id=collapse-Chakras-GetEssenceNamesByChakra class="panel-collapse collapse">
@@ -8559,7 +8559,7 @@
                           Element</strong> &nbsp;|&nbsp;
                         <strong class="request-method border-info">GET</strong>
                         &nbsp;
-                        https://medicineman-api.herokuapp.com//api/v1/elements/essence-data/metal
+                        https://essences-api.herokuapp.com//api/v1/elements/essence-data/metal
                       </h4>
                     </a></div>
                   <div id=collapse-Elements-GetEssenceDataByElement class="panel-collapse collapse">
@@ -8579,7 +8579,7 @@
                           Element</strong> &nbsp;|&nbsp;
                         <strong class="request-method border-info">GET</strong>
                         &nbsp;
-                        https://medicineman-api.herokuapp.com//api/v1/elements/essence-names/fire
+                        https://essences-api.herokuapp.com//api/v1/elements/essence-names/fire
                       </h4>
                     </a></div>
                   <div id=collapse-Elements-GetEssenceNamesByElement class="panel-collapse collapse">
@@ -8613,7 +8613,7 @@
                           Essences</strong> &nbsp;|&nbsp;
                         <strong class="request-method border-info">GET</strong>
                         &nbsp;
-                        https://medicineman-api.herokuapp.com//api/v1/essences
+                        https://essences-api.herokuapp.com//api/v1/essences
                       </h4>
                     </a></div>
                   <div id=collapse-Essences-GetAllEssences class="panel-collapse collapse">
@@ -8631,7 +8631,7 @@
                           Company</strong> &nbsp;|&nbsp;
                         <strong class="request-method border-info">GET</strong>
                         &nbsp;
-                        https://medicineman-api.herokuapp.com//api/v1/essences/company/pacific
+                        https://essences-api.herokuapp.com//api/v1/essences/company/pacific
                       </h4>
                     </a></div>
                   <div id=collapse-Essences-GetEssencesByCompany class="panel-collapse collapse">
@@ -8649,7 +8649,7 @@
                           Group</strong> &nbsp;|&nbsp;
                         <strong class="request-method border-info">GET</strong>
                         &nbsp;
-                        https://medicineman-api.herokuapp.com//api/v1/essences/group/SeaEssences
+                        https://essences-api.herokuapp.com//api/v1/essences/group/SeaEssences
                       </h4>
                     </a></div>
                   <div id=collapse-Essences-GetEssencesByGroup class="panel-collapse collapse">
@@ -8669,7 +8669,7 @@
                           Name</strong> &nbsp;|&nbsp;
                         <strong class="request-method border-info">GET</strong>
                         &nbsp;
-                        https://medicineman-api.herokuapp.com//api/v1/essences/soul_shield+
+                        https://essences-api.herokuapp.com//api/v1/essences/soul_shield+
                       </h4>
                     </a></div>
                   <div id=collapse-Essences-GetSingleEssenceByName class="panel-collapse collapse">
@@ -8703,7 +8703,7 @@
                           Info</strong> &nbsp;|&nbsp;
                         <strong class="request-method border-info">GET</strong>
                         &nbsp;
-                        https://medicineman-api.herokuapp.com//api/v1/groupinfo/living_tree_orchid_essences/single_orchid_essences
+                        https://essences-api.herokuapp.com//api/v1/groupinfo/living_tree_orchid_essences/single_orchid_essences
                       </h4>
                     </a></div>
                   <div id=collapse-GroupInfo-GetGroupInfo class="panel-collapse collapse">
@@ -8721,7 +8721,7 @@
                           Company</strong> &nbsp;|&nbsp;
                         <strong class="request-method border-info">GET</strong>
                         &nbsp;
-                        https://medicineman-api.herokuapp.com//api/v1/groupinfo/alaskan
+                        https://essences-api.herokuapp.com//api/v1/groupinfo/alaskan
                       </h4>
                     </a></div>
                   <div id=collapse-GroupInfo-GetGroupsByCompany class="panel-collapse collapse">
@@ -8756,7 +8756,7 @@
                           Meridian</strong> &nbsp;|&nbsp;
                         <strong class="request-method border-info">GET</strong>
                         &nbsp;
-                        https://medicineman-api.herokuapp.com//api/v1/meridians/essence-data/large_intestine
+                        https://essences-api.herokuapp.com//api/v1/meridians/essence-data/large_intestine
                       </h4>
                     </a></div>
                   <div id=collapse-Meridians-GetEssenceDataByMeridian class="panel-collapse collapse">
@@ -8775,7 +8775,7 @@
                           Meridian</strong> &nbsp;|&nbsp;
                         <strong class="request-method border-info">GET</strong>
                         &nbsp;
-                        https://medicineman-api.herokuapp.com//api/v1/meridians/essence-names/triple_warmer
+                        https://essences-api.herokuapp.com//api/v1/meridians/essence-names/triple_warmer
                       </h4>
                     </a></div>
                   <div id=collapse-Meridians-GetEssenceNamesByMeridian class="panel-collapse collapse">
@@ -8812,7 +8812,7 @@
                           Titles</strong> &nbsp;|&nbsp;
                         <strong class="request-method border-info">GET</strong>
                         &nbsp;
-                        https://medicineman-api.herokuapp.com//api/v1/references/titles
+                        https://essences-api.herokuapp.com//api/v1/references/titles
                       </h4>
                     </a></div>
                   <div id=collapse-References-GetAllReferenceTitles class="panel-collapse collapse">
@@ -8830,7 +8830,7 @@
                           References</strong> &nbsp;|&nbsp;
                         <strong class="request-method border-info">GET</strong>
                         &nbsp;
-                        https://medicineman-api.herokuapp.com//api/v1/references
+                        https://essences-api.herokuapp.com//api/v1/references
                       </h4>
                     </a></div>
                   <div id=collapse-References-GetAllReferences class="panel-collapse collapse">
@@ -8849,7 +8849,7 @@
                           Reference</strong> &nbsp;|&nbsp;
                         <strong class="request-method border-info">GET</strong>
                         &nbsp;
-                        https://medicineman-api.herokuapp.com//api/v1/references/self-esteemself-worth
+                        https://essences-api.herokuapp.com//api/v1/references/self-esteemself-worth
                       </h4>
                     </a></div>
                   <div id=collapse-References-GetSingleReference class="panel-collapse collapse">
@@ -8890,7 +8890,7 @@
       <div class="span12 text-center"><span data-toggle=tooltip
           title="If the application help you, please feel free to give a star to the project in github. Your star inspire me to work more on open-source projects like this!">Made
           with <em class=love-color>&#9829;</em> by <a href=https://github.com/thedevsaddam target=_blank
-            class=text-muted>thedevsaddam</a> | Generated at: 2021-09-01 16:21:28 by <a
+            class=text-muted>thedevsaddam</a> | Generated at: 2021-09-01 17:04:45 by <a
             href=https://github.com/thedevsaddam/docgen target=_blank class=text-muted>docgen</a></span></div>
     </div>
   </footer>
