--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <title>Essences API
   &nbsp;|&nbsp;
-  Backend API that provides information of flower essences.</title>
+  Backend API that provides flower essence information.</title>
 <style media=screen>
   /*!* Bootstrap v3.3.7 (http://getbootstrap.com)
 * Copyright 2011-2016 Twitter, Inc.
@@ -8401,7 +8401,7 @@
     <div class="col-md-12 collection-intro">
       <h3>Essences API</h3>
       <p>
-      <p>Backend API for the MedicineMan application.
+      <p>Backend API providing flower essence information.
     </div>
     <div class=col-md-12>
       <div class=col-md-3>
